# -zetachain-solana-universal-nft

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS_COMPLIANCE.md  TESTING_GUIDE.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
app/: next.config.js  package.json
app/components/: UniversalNftDemo.tsx
app/pages/: index.tsx
benchmarks/: performance_suite.rs
docs/: API.md  ARCHITECTURE.md  CROSS_CHAIN.md  SECURITY.md  TUTORIALS.md
examples/: cross-chain-demo.ts
integrations/: README.md
integrations/enterprise/: enterprise_solutions.rs
integrations/partnerships/: ecosystem_adapter.rs  strategic_partnerships.md
programs/universal-nft/: Cargo.toml
programs/universal-nft/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/universal-nft/src/analytics/: metrics.rs  mod.rs  monitoring.rs
programs/universal-nft/src/governance/: dao.rs  mod.rs  proposals.rs  treasury.rs  upgrade_authority.rs  voting.rs
programs/universal-nft/src/instructions/: cross_chain.rs  initialize.rs  metadata.rs  mint_nft.rs  mod.rs  signature.rs  transfer.rs
programs/universal-nft/src/recovery/: error_recovery.rs  mod.rs  state_recovery.rs  transaction_retry.rs
programs/universal-nft/src/security/: circuit_breaker.rs  fraud_detection.rs  mod.rs
scripts/: deploy.sh  devnet.sh  initialize.ts  verify-implementation.sh
sdk/typescript/src/: UniversalNftSDK.ts
tests/: cross-chain-integration.ts  universal-nft.ts
