[package]
name = "universal-nft"
version = "0.1.0"
description = "ZetaChain Universal NFT Program for Cross-Chain Transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "3.2.1"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"
borsh = "0.10"
sha2 = "0.10"
libsecp256k1 = "0.7"
arrayref = "0.3"
bytemuck = "1.15"